--- a/movie.html
+++ b/movie.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="utf-8" />
     <title>tempo example</title>
+    <link href="./style/css/main.css" rel="stylesheet" type="text/css" />
     <script src="style/js/tempo.js"></script>
     <script src="style/json/data.json"></script>
 </head>
 <body>
+
+    <div class="web-hd">
+
+        <div class="web-logo-wrap" style="float:left">
+                <a href="index.html" class="web-logo"></a>
+            </div>
+            <div style="float:right" id="newtop"><a href="javascript:auth()">傲天动联</a></div>
+            <div style="clear:both"></div>
+            <div style="clear:both" id="notice_div">
+                <div class="close" onClick="closeTips();"></div>
+                <div class="ltext" id="authmsg">欢迎您，您已成功连接。可以免流量访问本网站的内容和服务！
+        </div>
+        </div>
+            <ul class="web-nav">
+                <li class="active"><a href="index.html">推荐</a></li>
+                <li><a href="movie.html">电影</a></li>
+                <li><a href="game.html">游戏</a></li>
+                <li><a href="app.html">应用</a></li>
+
+            </ul>
+    </div>
+    <div class="movie">
     <ul id="users" data-template >
+
         <li style="border:none;list-style:none">
-            <a href="moviePlay.html?film={{film}}"><img src='resource/movie/{{image}}'></a>
-        </li>
-        <li style='list-style:none'>
-            {{name}} {{time}}
-        </li>
+            <a href="moviePlay.html?film={{filmNo}}"><img src='/resource/movie/{{image}}'><br><br>
+            </a>
+            <div class="clear"></div>
+            &nbsp&nbsp{{name}} {{time}}
+        </li> 
+
         <li data-template-fallback>Meh... we don't have no users today.</li>
     </ul>
+    </div>
+
+    
+
  <script>
 
         Tempo.prepare("users").render(data.movie);
 </script>
+
+       
 </body>
 </html>
